<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/custom_keyboard_create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_keyboards_create_dialog_name_hint"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/custom_keyboard_create_template_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <RadioButton
            android:id="@+id/custom_keyboard_create_template_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/custom_keyboards_template_full_qwerty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/custom_keyboards_template_full_qwerty_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioButton
            android:id="@+id/custom_keyboard_create_template_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/custom_keyboards_template_basic_qwerty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/custom_keyboards_template_basic_qwerty_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RadioGroup>
</LinearLayout>
